# wgfx-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: triangle.wgsl
src/: clock.cpp  clock.h  main.cpp  window.cpp  window.h
